// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3ID DID Resolver Legacy (v0) resolves 3id v0 1`] = `
Object {
  "didDocument": Object {
    "authentication": Array [
      Object {
        "controller": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi",
        "id": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi#7uFZ8RP1qUVU87P",
        "publicKeyBase58": "h3ZsRvyVTpF6NheK7BZGaKeFv2K4qZridCfaiVoNFeFf",
        "type": "EcdsaSecp256k1Signature2019",
      },
    ],
    "id": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi",
    "keyAgreement": Array [
      Object {
        "controller": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi",
        "id": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi#FRNNWcZDvDZcpVC",
        "publicKeyBase58": "qFYM1z9dJUC1K7rphEDVCj8U1YTzeFDVXtsjTa2uSiS",
        "type": "X25519KeyAgreementKey2019",
      },
    ],
    "publicKey": Array [
      Object {
        "controller": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi",
        "id": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi#7uFZ8RP1qUVU87P",
        "publicKeyBase58": "h3ZsRvyVTpF6NheK7BZGaKeFv2K4qZridCfaiVoNFeFf",
        "type": "EcdsaSecp256k1Signature2019",
      },
      Object {
        "controller": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi",
        "id": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi#FRNNWcZDvDZcpVC",
        "publicKeyBase58": "qFYM1z9dJUC1K7rphEDVCj8U1YTzeFDVXtsjTa2uSiS",
        "type": "X25519KeyAgreementKey2019",
      },
    ],
    "verificationMethod": Array [
      Object {
        "controller": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi",
        "id": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi#7uFZ8RP1qUVU87P",
        "publicKeyBase58": "h3ZsRvyVTpF6NheK7BZGaKeFv2K4qZridCfaiVoNFeFf",
        "type": "EcdsaSecp256k1Signature2019",
      },
      Object {
        "controller": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi",
        "id": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi#FRNNWcZDvDZcpVC",
        "publicKeyBase58": "qFYM1z9dJUC1K7rphEDVCj8U1YTzeFDVXtsjTa2uSiS",
        "type": "X25519KeyAgreementKey2019",
      },
    ],
  },
  "didDocumentMetadata": Object {},
  "didResolutionMetadata": Object {
    "contentType": "application/did+json",
  },
}
`;

exports[`3ID DID Resolver Legacy (v0) resolves 3id v0 which includs ceramic updates 1`] = `
Object {
  "didDocument": Object {
    "authentication": Array [
      Object {
        "controller": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi",
        "id": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi#8VBUiUTCeHbTeTV",
        "publicKeyBase58": "2Bv3fQSJiGJsbUUfUdiPsXXZGG5cXqaSeYnieuJcUFAbm",
        "type": "EcdsaSecp256k1Signature2019",
      },
    ],
    "id": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi",
    "keyAgreement": Array [
      Object {
        "controller": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi",
        "id": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi#6F7kmzdodfvUCo9",
        "publicKeyBase58": "4jQRvHW8RfnRfdTrsxmExsn24z2vCV4xsoGxKB2Pkq2P",
        "type": "X25519KeyAgreementKey2019",
      },
    ],
    "publicKey": Array [
      Object {
        "controller": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi",
        "id": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi#8VBUiUTCeHbTeTV",
        "publicKeyBase58": "2Bv3fQSJiGJsbUUfUdiPsXXZGG5cXqaSeYnieuJcUFAbm",
        "type": "EcdsaSecp256k1Signature2019",
      },
      Object {
        "controller": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi",
        "id": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi#6F7kmzdodfvUCo9",
        "publicKeyBase58": "4jQRvHW8RfnRfdTrsxmExsn24z2vCV4xsoGxKB2Pkq2P",
        "type": "X25519KeyAgreementKey2019",
      },
    ],
    "verificationMethod": Array [
      Object {
        "controller": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi",
        "id": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi#8VBUiUTCeHbTeTV",
        "publicKeyBase58": "2Bv3fQSJiGJsbUUfUdiPsXXZGG5cXqaSeYnieuJcUFAbm",
        "type": "EcdsaSecp256k1Signature2019",
      },
      Object {
        "controller": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi",
        "id": "did:3:bafyreiffkeeq4wq2htejqla2is5ognligi4lvjhwrpqpl2kazjdoecmugi#6F7kmzdodfvUCo9",
        "publicKeyBase58": "4jQRvHW8RfnRfdTrsxmExsn24z2vCV4xsoGxKB2Pkq2P",
        "type": "X25519KeyAgreementKey2019",
      },
    ],
  },
  "didDocumentMetadata": Object {},
  "didResolutionMetadata": Object {
    "contentType": "application/did+json",
  },
}
`;

exports[`3ID DID Resolver adds IDX root as service 1`] = `
Object {
  "didDocument": Object {
    "authentication": Array [
      Object {
        "controller": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
        "id": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki#8VBUiUTCeHbTeTV",
        "publicKeyBase58": "2Bv3fQSJiGJsbUUfUdiPsXXZGG5cXqaSeYnieuJcUFAbm",
        "type": "EcdsaSecp256k1Signature2019",
      },
    ],
    "id": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    "keyAgreement": Array [
      Object {
        "controller": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
        "id": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki#6F7kmzdodfvUCo9",
        "publicKeyBase58": "4jQRvHW8RfnRfdTrsxmExsn24z2vCV4xsoGxKB2Pkq2P",
        "type": "X25519KeyAgreementKey2019",
      },
    ],
    "publicKey": Array [
      Object {
        "controller": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
        "id": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki#8VBUiUTCeHbTeTV",
        "publicKeyBase58": "2Bv3fQSJiGJsbUUfUdiPsXXZGG5cXqaSeYnieuJcUFAbm",
        "type": "EcdsaSecp256k1Signature2019",
      },
      Object {
        "controller": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
        "id": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki#6F7kmzdodfvUCo9",
        "publicKeyBase58": "4jQRvHW8RfnRfdTrsxmExsn24z2vCV4xsoGxKB2Pkq2P",
        "type": "X25519KeyAgreementKey2019",
      },
    ],
    "verificationMethod": Array [
      Object {
        "controller": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
        "id": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki#8VBUiUTCeHbTeTV",
        "publicKeyBase58": "2Bv3fQSJiGJsbUUfUdiPsXXZGG5cXqaSeYnieuJcUFAbm",
        "type": "EcdsaSecp256k1Signature2019",
      },
      Object {
        "controller": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
        "id": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki#6F7kmzdodfvUCo9",
        "publicKeyBase58": "4jQRvHW8RfnRfdTrsxmExsn24z2vCV4xsoGxKB2Pkq2P",
        "type": "X25519KeyAgreementKey2019",
      },
    ],
  },
  "didDocumentMetadata": Object {},
  "didResolutionMetadata": Object {
    "contentType": "application/did+json",
  },
}
`;

exports[`3ID DID Resolver resolves 3id document correctly 1`] = `
Object {
  "didDocument": Object {
    "authentication": Array [
      Object {
        "controller": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
        "id": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki#8VBUiUTCeHbTeTV",
        "publicKeyBase58": "2Bv3fQSJiGJsbUUfUdiPsXXZGG5cXqaSeYnieuJcUFAbm",
        "type": "EcdsaSecp256k1Signature2019",
      },
    ],
    "id": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    "keyAgreement": Array [
      Object {
        "controller": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
        "id": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki#6F7kmzdodfvUCo9",
        "publicKeyBase58": "4jQRvHW8RfnRfdTrsxmExsn24z2vCV4xsoGxKB2Pkq2P",
        "type": "X25519KeyAgreementKey2019",
      },
    ],
    "publicKey": Array [
      Object {
        "controller": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
        "id": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki#8VBUiUTCeHbTeTV",
        "publicKeyBase58": "2Bv3fQSJiGJsbUUfUdiPsXXZGG5cXqaSeYnieuJcUFAbm",
        "type": "EcdsaSecp256k1Signature2019",
      },
      Object {
        "controller": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
        "id": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki#6F7kmzdodfvUCo9",
        "publicKeyBase58": "4jQRvHW8RfnRfdTrsxmExsn24z2vCV4xsoGxKB2Pkq2P",
        "type": "X25519KeyAgreementKey2019",
      },
    ],
    "verificationMethod": Array [
      Object {
        "controller": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
        "id": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki#8VBUiUTCeHbTeTV",
        "publicKeyBase58": "2Bv3fQSJiGJsbUUfUdiPsXXZGG5cXqaSeYnieuJcUFAbm",
        "type": "EcdsaSecp256k1Signature2019",
      },
      Object {
        "controller": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
        "id": "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki#6F7kmzdodfvUCo9",
        "publicKeyBase58": "4jQRvHW8RfnRfdTrsxmExsn24z2vCV4xsoGxKB2Pkq2P",
        "type": "X25519KeyAgreementKey2019",
      },
    ],
  },
  "didDocumentMetadata": Object {},
  "didResolutionMetadata": Object {
    "contentType": "application/did+json",
  },
}
`;
